adjusted margins to fix input search bar on safari

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@
   margin-bottom: -17px;
   padding-left:2%;
   border-radius: 0px;
+  margin: 0 0 -17px 0;
 }
 
 /* placeholder  */
@@ -103,9 +104,9 @@ input {
 
  /* DELETE BUTTON */
 .deleteButton {
-  border: 0px solid white;
+  border: none;
   background-color: white;
-  width: 10%;
+  width: 15%;
 }
 
 /* TOGGLE */
